--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,14 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".ServiceActivity">
+        <activity android:name=".JobActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ServiceActivity"></activity>
         <activity android:name=".MainActivity">
 
         </activity>
@@ -23,6 +24,7 @@
         <receiver android:name=".ExemploReceiver">
             <intent-filter>
                 <action android:name="BROADCAST_ESTATICO" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
@@ -30,15 +32,23 @@
         <service android:name=".ExemploServices">
             <intent-filter>
                 <action android:name="ExemploService" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </service>
+        <service android:name=".ExemploBindService">
+            <intent-filter>
+                <action android:name="ExemploBindService" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </service>
 
-        <service android:name=".ExemploBindService">
-            <intent-filter>
-                <action android:name="ExemploBindService" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
+        <service
+                android:name=".ExemploJobService"
+                android:exported="true"
+                android:permission="android.permission.BIND_JOB_SERVICE">
+
         </service>
     </application>
 
