--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="com.example.androidintermediario">
 
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
             android:allowBackup="true"
@@ -12,18 +12,19 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".ThreadActivity">
+        <activity android:name=".ExemploSharedPreferencesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".JobActivity">
+        <activity android:name=".ThreadActivity">
 
         </activity>
+        <activity android:name=".JobActivity"></activity>
         <activity android:name=".ServiceActivity" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
 
         <receiver android:name=".ExemploReceiver">
             <intent-filter>
@@ -50,7 +51,7 @@
         <service
                 android:name=".ExemploJobService"
                 android:exported="true"
-                android:permission="android.permission.BIND_JOB_SERVICE"></service>
+                android:permission="android.permission.BIND_JOB_SERVICE" />
     </application>
 
 </manifest>
