--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="com.example.androidintermediario">
 
+    <permission android:name="com.example.androidintermediario.WRITE_DATABEASE" android:protectionLevel="normal"/>
+    <permission android:name="com.example.androidintermediario.READ_DATABEASE" android:protectionLevel="normal"/>
+    <permission android:name="com.example.androidintermediario.LivrosProvider" android:protectionLevel="normal"/>
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -13,7 +17,10 @@
                 android:name=".LivrosProvider"
                 android:authorities="com.example.androidintermediario"
                 android:enabled="true"
-                android:exported="true" />
+                android:exported="true"
+                android:permission="com.example.androidintermediario.LivrosProvider"
+                android:writePermission="com.example.androidintermediario.WRITE_DATABEASE"
+                android:readPermission="com.example.androidintermediario.READ_DATABEASE"/>
 
         <activity android:name=".MainActivity">
             <intent-filter>
