--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="com.example.androidintermediario">
 
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -16,6 +17,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        <provider
+                android:name=".AgendaProvider"
+                android:authorities="com.example.androidintermediario"
+                android:enabled="true"
+                android:exported="true" />
 
+        <activity android:name=".ContatoEditarActivity" />
+        <activity android:name=".ContatoInserirActivity"></activity>
+    </application>
 </manifest>
